--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.1",
+    "dotenv": "^8.1.0",
+    "inquirer": "^7.0.0",
     "node-spotify-api": "^1.1.1"
   },
   "bugs": {
