--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.1",
     "dotenv": "^8.1.0",
     "inquirer": "^7.0.0",
+    "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1"
   },
   "bugs": {
